--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="nomedoarquivo.css"/> 
 <meta charset="UTF-8"/>
-  <title> Revista Êxodos </title>
+  <title> Gabriel projeto oficina </title>
 
   <style Type="text/css">
   body {
